--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   <title>Document</title>
 </head>
 <body>
-
+  <header class="page-header">
+    <div class="page-header__logo-wrap">
+      <a href="#" class="page-header__logo-link">
+        <img src="img/logo.svg" alt="Pink">
+      </a>
+    </div>
+    <div class="page-header__nav-wrap">
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__active-item"><a href="#">Информация</a></li>
+          <li><a href="#"></a>Возможности</li>
+          <li><a href="#">Отзывы</a></li>
+          <li><a href="#">Стоимость</a></li>
+        </ul>
+        <a href="" class="main-nav__toogle main-nav__goggle--close"></a>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
